# mdn-lstm

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  tasks.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
src/mdn_lstm/: __init__.py  cli.py  config.py
src/mdn_lstm/data/: dataset.py
src/mdn_lstm/inference/: __init__.py  predictor.py
src/mdn_lstm/models/: __init__.py  mdn.py
src/mdn_lstm/training/: __init__.py  trainer.py
tests/: __init__.py  test_models.py
